# python_template

./: CONTRIBUTING.md.jinja  LICENSE  LICENSE.jinja  README.md  README.md.jinja  README_template.md  changelog.md.jinja  copier.yml  mkdocs.yml  pyproject.toml
docs/: 01_Introduction.en.rst  conf.py  index.en.rst.jinja  make.bat  make.sh
docs/css/: mkdocstring.css
src/{{project_name}}/: __init__.py.jinja  __main__.py.jinja
