[project]
name = "python-template" # {{project_name}}
version = "2025.1.0" 
# "{{major}}.1.0"
description = ""
authors = [
    {name = "haeban",email = "andreas.haeberle@stadlerrail.com"},
    {name = "felix",email = "felix@42sol.eu"},
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
copier = "^9.6.0"
black = "^25.1.0"
ruff = "^0.11.5"
sphinx = "^8.2.3"
pytest = "^8.3.5"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^3.0.2"
sphinx-gallery = "^0.19.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocs-autorefs = "^1.4.1"
mkdocs-markdownextradata-plugin = "^0.2.6"
mkdocstrings = "^0.29.1"
pymdown-extensions = "^10.14.3"

[[tool.poetry.include]]
path = "docs"
format = [ "sdist", "wheel",]

[[tool.poetry.include]]
path = "readme.md"
format = [ "sdist", "wheel",]

# [tool.poetry.scripts]
# {{project_name}} = "{{project_name}}.{{project_name}}:__main__"
